--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,323 @@
-<div>Hello world you are authors!</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/js/bootstrap.min.js"></script>
+
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="/main.css" />
+  </head>
+  <body>
+    <div class="frame">
+      <div class="main_frame">
+        <div class="left_frame">
+          <div class="left_1">
+            <div class="left_1_img">
+              <img src="images/profile.jpeg " width="156" height="142" alt="" />
+            </div>
+            <div class="left_1_name"><%=user.name%></div>
+
+            <div class="left_1_ish"><%=user.profession%></div>
+            <div class="left_1_icon">
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Facebook.jpeg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Instagram.jpeg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Youtube.jpeg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Linkeding.jpeg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Twitter.jpeg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Dribbble.jpeg" class="icon-1" alt="" />
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="marginer"></div>
+
+          <div class="left_2">
+            <div class="age_about">
+              <div class="age">Age:</div>
+              <div class="age_num">26</div>
+            </div>
+
+            <div class="res_info">
+              <div class="residence">Residence:</div>
+              <div class="res_area">UZB</div>
+            </div>
+
+            <div class="freelance_info">
+              <div class="freelance">Freelance:</div>
+              <div class="freelance_txt">Availabe</div>
+            </div>
+
+            <div class="address_info">
+              <div class="address">Address:</div>
+              <div class="address_txt">Seoul, S.Korea</div>
+            </div>
+          </div>
+          <div class="marginer"></div>
+
+          <div class="left_3">
+            <div class="lang_title">Languages</div>
+
+            <div class="lang_container">
+              <div class="lang_txt">Turkish</div>
+              <div class="lang_txt">100%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar"></div>
+            </div>
+
+            <div class="lang_container">
+              <div class="lang_txt">Korean</div>
+              <div class="lang_txt">80%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_2"></div>
+            </div>
+
+            <div class="lang_container">
+              <div class="lang_txt">English</div>
+              <div class="lang_txt">50%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_3"></div>
+            </div>
+          </div>
+          <div class="marginer"></div>
+
+          <div class="left_4">
+            <div class="lang_title">Skills</div>
+
+            <div class="lang_container">
+              <div class="lang_txt">HTML</div>
+              <div class="lang_txt">90%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_4"></div>
+            </div>
+
+            <div class="lang_container">
+              <div class="lang_txt">CSS</div>
+              <div class="lang_txt">85%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_5"></div>
+            </div>
+
+            <div class="lang_container">
+              <div class="lang_txt">JS</div>
+              <div class="lang_txt">80%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_6"></div>
+            </div>
+            <div class="lang_container">
+              <div class="lang_txt">PHP</div>
+              <div class="lang_txt">75%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_7"></div>
+            </div>
+            <div class="lang_container">
+              <div class="lang_txt">WordPress</div>
+              <div class="lang_txt">70%</div>
+            </div>
+            <div class="percantge_bar_container">
+              <div class="percantge_bar_8"></div>
+            </div>
+          </div>
+          <div class="marginer"></div>
+
+          <div class="left_5">
+            <div class="lang_title">Extra Skills</div>
+            <div class="extra_skill_container">
+              <img src="images/Icons.png" alt="" height="15px" width="15px" />
+              <div class="skill_txt">Bootstrap, Materialize</div>
+            </div>
+            <div class="extra_skill_container">
+              <img src="images/Icons.png" alt="" height="15px" width="15px" />
+              <div class="skill_txt">Sass,Less</div>
+            </div>
+            <div class="extra_skill_container">
+              <img src="images/Icons.png" alt="" height="15px" width="15px" />
+              <div class="skill_txt">Webpack, Gulp, Grunt</div>
+            </div>
+            <div class="extra_skill_container">
+              <img src="images/Icons.png" alt="" height="15px" width="15px" />
+              <div class="skill_txt">GIT Knowledge</div>
+            </div>
+          </div>
+          <div class="marginer"></div>
+        </div>
+
+        <div class="midd_frame">
+          <div class="about_container">
+            <div class="text_container">
+              <div class="job_tile">Doctor neurologists in OHSU Hospital</div>
+              <div class="job_description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et,
+                volutpat feugiat placerat lobortis. Natoque rutrum semper sed
+                suspendisse nunc lectus.
+              </div>
+
+              <button class="hire_me_btn">HIRE ME →</button>
+            </div>
+            <img src="images/profile.png" alt="" class="profile" />
+          </div>
+
+          <div class="my_service_container">
+            <div class="my_service_title">My services</div>
+            <div class="my_service_txt">
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit. lorem
+              ipsum
+            </div>
+          </div>
+
+          <div class="mid_frame_skill_container">
+            <div class="mid_frame_skill_box">
+              <img
+                src="images/Icons_coding-1.svg"
+                alt=""
+                class="mid_frame_skill_icon1"
+              />
+              <div class="mid_frame_skill_title">Web Devolopment</div>
+              <div class="mid_frame_skill_txt">Blog, E-Commerce</div>
+            </div>
+
+            <div class="mid_frame_skill_box">
+              <img
+                src="images/Icons_illustration.png"
+                alt=""
+                class="mid_frame_skill_icon1"
+              />
+              <div class="mid_frame_skill_title">UI/UX design</div>
+              <div class="mid_frame_skill_txt">Mobile app, website design</div>
+            </div>
+
+            <div class="mid_frame_skill_box">
+              <img
+                src="images/Icons_Microphone.png"
+                alt=""
+                class="mid_frame_skill_icon1"
+              />
+              <div class="mid_frame_skill_title">Sound design</div>
+              <div class="mid_frame_skill_txt">Voice Over, Beat Making</div>
+            </div>
+          </div>
+
+          <div class="mid_frame_skill_container">
+            <div class="mid_frame_skill_box">
+              <img
+                src="images/Icons_game-development.png"
+                alt=""
+                class="mid_frame_skill_icon1"
+              />
+              <div class="mid_frame_skill_title">Game design</div>
+              <div class="mid_frame_skill_txt">
+                Character Design, Props & Objects
+              </div>
+            </div>
+
+            <div class="mid_frame_skill_box">
+              <img
+                src="images/Icons_Photographer-1.png"
+                alt=""
+                class="mid_frame_skill_icon1"
+              />
+              <div class="mid_frame_skill_title">Photography</div>
+              <div class="mid_frame_skill_txt">
+                Portrait, Product Photography
+              </div>
+            </div>
+
+            <div class="mid_frame_skill_box">
+              <div class="mid_frame_skill_txt1">Advertising</div>
+              <div class="mid_frame_skill_title1">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae
+                nulla diam in ac dictum a urna viverra morbi.
+              </div>
+              <div class="mid_frame_skill_btn">ORDER NOW</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="right_frame">
+          <a class="link_href" href="">
+            <div class="icon-4">
+              <img src="btn_icon/Contrast.png" class="icon-2" alt="" />
+            </div>
+          </a>
+
+          <div class="right_frame_btn_container">
+            <!-- <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="btn_icon/Home (1).png" alt="" />
+              </div>
+            </a> -->
+            <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="images/Home.png" alt="" />
+              </div>
+            </a>
+
+            <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="images/Service.png" alt="" />
+              </div>
+            </a>
+
+            <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="images/CV.png" alt="" />
+              </div>
+            </a>
+
+            <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="images/Portfolio.png" alt="" />
+              </div>
+            </a>
+
+            <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="images/Blog.png" alt="" />
+              </div>
+            </a>
+
+            <a class="link_href" href="">
+              <div class="icon-4">
+                <img src="images/Contact.png" alt="" />
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
