--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -36,6 +36,15 @@
           </div>
         </form>
       </div>
+      <div>
+        <button
+          id="clean-all"
+          class="btn btn-danger"
+          style="border-radius: 40px"
+        >
+          Hamma Rajalarni O'chirish
+        </button>
+      </div>
     </div>
   </body>
 </html>
