--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -70,5 +70,7 @@
         </button>
       </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
   </body>
 </html>
